# RHICf_J

./: CMakeLists.txt  Doxyfile  ERvsP.in  ERvsPR.in  FindHepMC.cmake  FindPythia8.cmake  GNUmakefile  Makefile  TLwoW.cc  TOPwoW.cc  TSwoW.cc  eRHICF.cc  example.in  exampleB5.in  hepmc_ascii.in  init_vis.mac  main.cc  run1.mac  uni.mac  vis.mac  vis1.mac
SimuData/: NDEDEW.out  ZDC.root  a.out  main.C  makeroot.C
doc/html/: _b5_primary_generator_action_8hh.html  _b5_primary_generator_action_8hh_source.html  _ex_n04_primary_generator_action_8hh_source.html  _ex_n04_primary_generator_messenger_8hh_source.html  _hep_m_c_g4_ascii_reader_8hh_source.html  _hep_m_c_g4_ascii_reader_messenger_8hh_source.html  _hep_m_c_g4_interface_8hh_source.html  _hep_m_c_g4_pythia_interface_8hh_source.html  _hep_m_c_g4_pythia_messenger_8hh_source.html  _magnetic_field_8hh_source.html  _r_h_i_c_f_action_initialization_8hh_source.html  _r_h_i_c_f_detector_construction_8hh_source.html  _r_h_i_c_f_event_action_8hh_source.html  _r_h_i_c_f_extra_physics_8hh_source.html  _r_h_i_c_f_materials_8hh_source.html  _r_h_i_c_f_optical_physics_8hh_source.html  _r_h_i_c_f_physics_list_8hh_source.html  _r_h_i_c_f_physics_list_messenger_8hh_source.html  _r_h_i_c_f_run_action_8hh_source.html  _r_h_i_c_f_step_max_8hh_source.html  annotated.html  class_b5_primary_generator_action-members.html  class_b5_primary_generator_action.html  class_ex_n04_primary_generator_action-members.html  class_ex_n04_primary_generator_action.html  class_ex_n04_primary_generator_messenger-members.html  class_ex_n04_primary_generator_messenger.html  class_hep_m_c_g4_ascii_reader-members.html  class_hep_m_c_g4_ascii_reader.html  class_hep_m_c_g4_ascii_reader_messenger-members.html  class_hep_m_c_g4_ascii_reader_messenger.html  class_hep_m_c_g4_interface-members.html  class_hep_m_c_g4_interface.html  class_hep_m_c_g4_pythia_interface-members.html  class_hep_m_c_g4_pythia_interface.html  class_hep_m_c_g4_pythia_messenger-members.html  class_hep_m_c_g4_pythia_messenger.html  class_magnetic_field-members.html  class_magnetic_field.html  class_r_h_i_c_f_action_initialization-members.html  (+28 more)
doc/html/search/: all_0.js  all_1.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  functions_1.js  searchdata.js
doc/latex/: _b5_primary_generator_action_8hh.tex  annotated.tex  class_b5_primary_generator_action.eps  class_b5_primary_generator_action.tex  class_ex_n04_primary_generator_action.eps  class_ex_n04_primary_generator_action.tex  class_ex_n04_primary_generator_messenger.eps  class_ex_n04_primary_generator_messenger.tex  class_hep_m_c_g4_ascii_reader.eps  class_hep_m_c_g4_ascii_reader.tex  class_hep_m_c_g4_ascii_reader_messenger.eps  class_hep_m_c_g4_ascii_reader_messenger.tex  class_hep_m_c_g4_interface.eps  class_hep_m_c_g4_interface.tex  class_hep_m_c_g4_pythia_interface.eps  class_hep_m_c_g4_pythia_interface.tex  class_hep_m_c_g4_pythia_messenger.eps  class_hep_m_c_g4_pythia_messenger.tex  class_magnetic_field.eps  class_magnetic_field.tex  class_r_h_i_c_f_action_initialization.eps  class_r_h_i_c_f_action_initialization.tex  class_r_h_i_c_f_detector_construction.eps  class_r_h_i_c_f_detector_construction.tex  class_r_h_i_c_f_event_action.eps  class_r_h_i_c_f_event_action.tex  class_r_h_i_c_f_extra_physics.eps  class_r_h_i_c_f_extra_physics.tex  class_r_h_i_c_f_materials.tex  class_r_h_i_c_f_optical_physics.eps  class_r_h_i_c_f_optical_physics.tex  class_r_h_i_c_f_physics_list.eps  class_r_h_i_c_f_physics_list.tex  class_r_h_i_c_f_physics_list_messenger.eps  class_r_h_i_c_f_physics_list_messenger.tex  class_r_h_i_c_f_run_action.eps  class_r_h_i_c_f_run_action.tex  class_r_h_i_c_f_step_max.eps  class_r_h_i_c_f_step_max.tex  files.tex  (+3 more)
include/: .exampleDetectorConstruction.hh.swp  ARCAnalysis.hh  B5PrimaryGeneratorAction.hh  FileManager.hh  IPCenterInterface.hh  MagneticField.hh  PythiaInterface.hh  RHICFActionInitialization.hh  RHICFDetectorConstruction.hh  RHICFDetectorConstruction.hh.orig  RHICFDetectorConstructionTLwoW.hh  RHICFDetectorConstructionTOPwoW.hh  RHICFDetectorConstructionTSwoW.hh  RHICFEventAction.hh  RHICFExtraPhysics.hh  RHICFManager.hh  RHICFMaterials.hh  RHICFOpticalPhysics.hh  RHICFPhysicsList.hh  RHICFPhysicsListMessenger.hh  RHICFPrimaryGeneratorAction.hh  RHICFPrimaryGeneratorMessenger.hh  RHICFPythia.hh  RHICFRunAction.hh  RHICFRunActionMessenger.hh  RHICFStepMax.hh  RHICFSteppingAction.hh  RHICFTrackingAction.hh  Seeder.hh  TestInterface.hh
src/: .HepMCG4PythiaInterface.cc.swp  .MagneticField.cc.swp  :w  ARCAnalysis.cc  B5PrimaryGeneratorAction.cc  ExN04PrimaryGeneratorAction.cc  ExN04PrimaryGeneratorMessenger.cc  FileManager.cc  HepMCG4AsciiReaderMessenger.cc  HepMCG4Interface.cc  IPCenterInterface.cc  MagneticField.cc  PythiaInterface.cc  RHICFActionInitialization.cc  RHICFDetectorConstruction.cc  RHICFDetectorConstructionTLwoW.cc  RHICFDetectorConstructionTOPwoW.cc  RHICFDetectorConstructionTSwoW.cc  RHICFDetectorConstruction_BACKUP_13280.cc  RHICFDetectorConstruction_BASE_13280.cc  RHICFDetectorConstruction_LOCAL_13280.cc  RHICFEventAction.cc  RHICFEventAction.cc.orig  RHICFExtraPhysics.cc  RHICFManager.cc  RHICFMaterials.cc  RHICFOpticalPhysics.cc  RHICFPhysicsList.cc  RHICFPhysicsListMessenger.cc  RHICFPrimaryGeneratorAction.cc  RHICFPrimaryGeneratorMessenger.cc  RHICFPythia.cc  RHICFRunAction.cc  RHICFRunAction.cc.orig  RHICFRunActionMessenger.cc  RHICFStepMax.cc  RHICFSteppingAction.cc  RHICFTrackingAction.cc  Seeder.cc  TestInterface.cc
